# llm-connector

./: README.md  example.py  pyproject.toml
llm/: Controller.py
llm/apis/: base.py  gemini_models.py  ollama_model.py  output_schema.py
