[tool.poetry]
name = "llm-connector"
version = "0.1.0"
description = ""
authors = ["praja <prajapatihs1304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
pydantic = "^2.11.7"
ollama = "^0.5.3"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
